# lsqfit-gui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fcn.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pytest.yml
doc/: Makefile
doc/source/: about.md  conf.py  customization.md  examples.md  examples.rst  index.rst  quickstart.md  quickstart.rst
doc/source/_static/: custom.css
doc/source/api/: lsqfitgui.backend.rst  lsqfitgui.backend.sidebar.rst  lsqfitgui.frontend.content.rst  lsqfitgui.frontend.dashboard.rst  lsqfitgui.frontend.rst  lsqfitgui.frontend.sidebar.rst  lsqfitgui.frontend.widgets.export_prior.rst  lsqfitgui.frontend.widgets.rst  lsqfitgui.lsqfitgui.rst  lsqfitgui.plot.distribution.rst  lsqfitgui.plot.fit.rst  lsqfitgui.plot.rst  lsqfitgui.plot.uncertainty.rst  lsqfitgui.plot.util.rst  lsqfitgui.rst  lsqfitgui.scripts.entrypoint.rst  lsqfitgui.scripts.rst  lsqfitgui.util.function.rst  lsqfitgui.util.gvar.rst  lsqfitgui.util.rst  lsqfitgui.util.versions.rst  lsqfitgui.version.rst  modules.rst
example/: .gitignore  Readme.md  entrypoint.py  fit.py  lsqfit_basic_example.py  lsqfit_multi_fitter_example.py  lsqfit_only_y_prior_array.py  lsqfit_simple_fit.py  lsqfit_stability_example.py  multi_key_example.py
lsqfitgui/: __init__.py  dashboard.py  entrypoint.py  inspect.py  lsqfitgui  lsqfitgui.py  version.py
lsqfitgui/backend/: __init__.py  sidebar.py
lsqfitgui/frontend/: body.py  content.py  dashboard.py  sidebar.py
lsqfitgui/frontend/widgets/: export_prior.py
lsqfitgui/plot/: distribution.py  fit.py  uncertainty.py  util.py
lsqfitgui/scripts/: entrypoint.py
lsqfitgui/util/: callback.py  data.py  function.py  gvar.py  models.py  prior.py  versions.py
lsqfitgui/validation/: __init__.py  exceptions.py  fit.py
tests/: lsqfit_basic_example_test.py  lsqfit_lsqfit_only_y_prior_array_test.py  lsqfit_multi_fitter_example_test.py  lsqfit_stability_example_test.py  multi_key_example_test.py  poly_fit_test.py
