[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = [
    "sympy",
    "scipy.stats",
    "gvar",
    "lsqfit.*",
    "dash.*",
    "plotly.*",
    "dash_bootstrap_components.*",
    "click"
]
ignore_missing_imports = true

[tool.black]
line-length = 99
