[metadata]
name = lsqfitgui
version = file: lsqfitgui/_version.txt
description = Graphical User Interface for Bayesian fits.
author = @ckoerber, @millernb
author_email = software@ckoerber.com
url = https://github.com/ckoerber/lsqfit-gui/
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = Bayesian Inference, Fitting, Dash

[options]
packages = find:
install_requires =
    lsqfit
    pandas
    sympy
    plotly
    dash
    dash-bootstrap-components >= "1.0.0"
    PyYAML

python_requires = >=3.6
include_package_data = true

test_suite = tests
setup_requires = setuptools >= 40.9.0
tests_requires =
    dash[testing]
    pytest

[options.packages.find]
exclude =
    doc
    example
    tests

[options.package_data]
lsqfitgui = _version.txt, assets/*.js

[options.entry_points]
console_scripts =
    lsqfitgui = lsqfitgui.scripts.entrypoint:main

[flake8]
max-line-length = 99
