[metadata]
name = lsqfitgui
version = file: lsqfitgui/_version.txt
description = Graphical User Interface for Bayesian fits.
author = @ckoerber, @millernb
author_email = software@ckoerber.com
url = https://github.com/ckoerber/lsqfit-gui/
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = Bayesian Inference, Fitting, Dash

[options]
packages = find:
install_requires =
    lsqfit
    pandas
    sympy
    plotly
    dash
    dash-bootstrap-components >= 1.0.0
    PyYAML

python_requires = >=3.6
include_package_data = true
setup_requires = setuptools >= 40.9.0

test_suite = pytest
tests_requires =
    dash[testing]
    pytest

[options.packages.find]
exclude =
    doc
    example
    tests

[options.extras_require]
test =
    dash[testing]
    pytest


[options.package_data]
lsqfitgui = _version.txt, assets/*.js

[options.entry_points]
console_scripts =
    lsqfitgui = lsqfitgui.scripts.entrypoint:main

[flake8]
max-line-length = 99
per-file-ignores =
    example/*.py: D107, D101, D103

[tool:pytest]
minversion = 6.0
addopts = --headless
testpaths = tests
